@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2004/07/04 22:22:41 jmmv Exp $
-bin/menu2wm
-man/man1/menu2wm.1
-share/doc/menu2wm/CHANGES
-share/doc/menu2wm/COPYING
-share/doc/menu2wm/PEOPLE
-share/doc/menu2wm/README
-share/doc/menu2wm/TODO
-share/examples/menu2wm/ex1.xml
-share/xml/menu2wm.dtd
-@comment in xmlcatmgr: @dirrm share/xml
-@dirrm share/examples/menu2wm
-@dirrm share/doc/menu2wm
