@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9447 2005/03/06 19:26:58 hira Exp $
+$NetBSD: CHANGES,v 1.9448 2005/03/06 21:19:32 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1302,3 +1302,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added ruby18-base-1.8.2 [taca 2005-03-06]
 	Updated mlterm to 2.9.2 [hira 2005-03-06]
 	Updated wl to 2.12.2 [hira 2005-03-06]
+	Removed menu2wm [jmmv 2005-03-06]
